# ProteiTask

./: CMakeLists.txt  README.md
client/: echoclient.cpp  echoclient.h  main.cpp
common/: globals.h  utils.h
server/: echoserver.cpp  echoserver.h  listeners.cpp  listeners.h  main.cpp
